// Copyright (c) 2016-present, Facebook, Inc.
// All rights reserved.
//
// This source code is licensed under the BSD-style license found in the
// LICENSE file in the root directory of this source tree. An additional grant
// of patent rights can be found in the PATENTS file in the same directory.
syntax = "proto3";

package magma.lte;
option go_package = "magma/lte/cloud/go/protos";

message AbortSessionRequest {
    string session_id = 1;
    string user_name = 2; // IMSI
}

message AbortSessionResult {
    enum Code {
        SESSION_REMOVED = 0;
        SESSION_NOT_FOUND = 1;
        USER_NOT_FOUND = 2;
        GATEWAY_NOT_FOUND = 3;
        RADIUS_SERVER_ERROR = 4;
    }
    Code code = 1;
    string error_message = 2;
}

service AbortSessionResponder {
    rpc AbortSession(AbortSessionRequest) returns (AbortSessionResult) {}
}
